@@ -10,14 +10,14 @@
     <properties>
         <main.class>com.github.bigibas123.bigidiscordbot.Main</main.class>
 
-        <jda.version>4.2.0_247</jda.version>
+        <jda.version>4.3.0_296</jda.version>
         <jda-nas.version>1.1.0</jda-nas.version>
-        <lavaplayer.version>1.3.73</lavaplayer.version>
+        <lavaplayer.version>1.3.77</lavaplayer.version>
         <log4j.version>2.14.1</log4j.version>
         <lombok.version>1.18.20</lombok.version>
 
-        <maven.compiler.source>14</maven.compiler.source>
-        <maven.compiler.target>14</maven.compiler.target>
+        <maven.compiler.source>16</maven.compiler.source>
+        <maven.compiler.target>16</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -103,7 +103,7 @@
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+<!--                    <compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
                 </configuration>
             </plugin>
         </plugins>
@@ -112,9 +112,14 @@
 
     <repositories>
         <repository>
-            <id>jcenter</id>
-            <name>jcenter-bintray</name>
+            <id>central</id>
+            <name>bintray</name>
             <url>https://jcenter.bintray.com</url>
+        </repository>
+        <repository>
+            <id>dv8tion</id>
+            <name>m2-dv8tion</name>
+            <url>https://m2.dv8tion.net/releases</url>
         </repository>
     </repositories>
 </project>
